--- a/src/Acme/CalculatorBundle/Resources/views/Default/result.html.twig
+++ b/src/Acme/CalculatorBundle/Resources/views/Default/result.html.twig
@@ -7,10 +7,7 @@
     <h1>Result</h1>
     <span>
         {{ operandA }}
-        {% if operator == 'add' %}+{% endif %}
-        {% if operator == 'substract' %}-{% endif %}
-        {% if operator == 'multiply' %}*{% endif %}
-        {% if operator == 'divide' %}/{% endif %}
+        {{ operator.label }}
         {{ operandB }}
         =
         {{ result }}
