use jms serializer to handle serialization

--- a/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
@@ -4,13 +4,13 @@
     <title>Calculator V1</title>
 </head>
 <body>
-    <h1>Result</h1>
+<h1>Result</h1>
     <span>
-        {{ operandA }}
+        {{ operand_a.value }}
         {{ operator.label }}
-        {{ operandB }}
+        {{ operand_b.value }}
         =
-        {{ result }}
+        {{ result.value }}
     </span>
 </body>
 </html>
