use guzzle as base for service clients ; extract calculatorModel from calculatorAPI to share data model and webservice clients with calculatorUI

--- a/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
@@ -6,11 +6,11 @@
 <body>
 <h1>Result</h1>
     <span>
-        {{ operand_a.value }}
-        {{ operator.label }}
-        {{ operand_b.value }}
+        {{ operation.operandA.value }}
+        {{ operation.operator.label }}
+        {{ operation.operandB.value }}
         =
-        {{ result.value }}
+        {{ operation.result.value }}
     </span>
 </body>
 </html>
