add support for i18n

--- a/src/Acme/CalculatorUIBundle/Resources/views/Common/header.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Common/header.html.twig
@@ -1,4 +1,4 @@
 <header>
     <a href="{{ path('acme_calculator_ui_homepage') }}"></a>
-    <em>My super calculator</em>
+    <em>{% trans %}header.title{% endtrans %}</em>
 </header>
