--- a/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Default/result.html.twig
@@ -11,9 +11,9 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block title %}Calculator Result page{% endblock %}
+{% block title %}{% trans %}seo.title.result{% endtrans %}{% endblock %}
 
-{% block h1 %}<h1>Calculator Result page V3</h1>{% endblock %}
+{% block h1 %}<h1>{% trans %}seo.h1.result{% endtrans %}</h1>{% endblock %}
 
 {% block javascript %}
     {% set jsSources = "" %}
