--- a/src/Acme/CalculatorUIBundle/Resources/views/Common/computeForm.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Common/computeForm.html.twig
@@ -1,12 +1,12 @@
 {% macro computeForm(operandA, operandB, operatorId) %}
     <form action="{{ path('acme_calculator_ui_compute') }}" class="well">
         <div class="form-group">
-            <label for="operand-a">Operand A</label>
+            <label for="operand-a">{% trans with {'%id%': 'A'}%}operand{% endtrans %}</label>
             <input name="operand-a" id="operand-a" class="form-control" value="{{ operandA | default('') }}"/>
         </div>
 
         <div class="form-group">
-            <label for="operator">Operator</label>
+            <label for="operator">{% trans %}operator{% endtrans %}</label>
             <select name="operator" id="operator" class="form-control">
                 <option value="add" {% if operatorId == "add" %}selected{% endif %}>+</option>
                 <option value="substract" {% if operatorId == "substract" %}selected{% endif %}>-</option>
@@ -16,10 +16,10 @@
         </div>
 
         <div class="form-group">
-            <label for="operand-b">Operand B</label>
+            <label for="operand-b">{% trans with {'%id%': 'B'}%}operand{% endtrans %}</label>
             <input name="operand-b" id="operand-b" class="form-control" value="{{ operandB | default('') }}"/>
         </div>
 
-        <button type="submit" class="btn btn-default">Compute</button>
+        <button type="submit" class="btn btn-default">{% trans %}compute{% endtrans %}</button>
     </form>
 {% endmacro %}
