--- a/src/Acme/CalculatorUIBundle/Resources/views/Common/footer.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Common/footer.html.twig
@@ -1,16 +1,16 @@
 <footer>
     <ul>
         <li>
-            <a href="{{ path('acme_calculator_ui_footer_contact_us') }}">Contact Us</a>
+            <a href="{{ path('acme_calculator_ui_footer_contact_us') }}">{% trans %}footer.contact{% endtrans %}</a>
         </li>
         <li>
-            <a href="{{ path('acme_calculator_ui_footer_legal') }}">Legal</a>
+            <a href="{{ path('acme_calculator_ui_footer_legal') }}">{% trans %}footer.legal{% endtrans %}</a>
         </li>
         <li>
-            <a href="{{ path('acme_calculator_ui_footer_confidentiality') }}">Confidentiality</a>
+            <a href="{{ path('acme_calculator_ui_footer_confidentiality') }}">{% trans %}footer.confidentiality{% endtrans %}</a>
         </li>
         <li class="jobs">
-            <a href="{{ path('acme_calculator_ui_footer_jobs') }}">Jobs</a>
+            <a href="{{ path('acme_calculator_ui_footer_jobs') }}">{% trans %}footer.jobs{% endtrans %}</a>
         </li>
     </ul>
 </footer>
