--- a/src/Acme/CalculatorUIBundle/Resources/views/Common/computeForm.html.twig
+++ b/src/Acme/CalculatorUIBundle/Resources/views/Common/computeForm.html.twig
@@ -1,25 +1,27 @@
-{% macro computeForm(operandA, operandB, operatorId) %}
-    <form action="{{ path('acme_calculator_ui_compute') }}" class="well">
+{% macro displayComputeForm(form) %}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_errors(form) }}
+
         <div class="form-group">
-            <label for="operand-a">{% trans with {'%id%': 'A'}%}operand{% endtrans %}</label>
-            <input name="operand-a" id="operand-a" class="form-control" value="{{ operandA | default('') }}"/>
+            {{ form_label(form.operandA.value, 'operand' | trans({'%id%': 'A'})) }}
+            {{ form_errors(form.operandA.value) }}
+            {{ form_widget(form.operandA.value, {'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="form-group">
-            <label for="operator">{% trans %}operator{% endtrans %}</label>
-            <select name="operator" id="operator" class="form-control">
-                <option value="add" {% if operatorId == "add" %}selected{% endif %}>+</option>
-                <option value="substract" {% if operatorId == "substract" %}selected{% endif %}>-</option>
-                <option value="multiply" {% if operatorId == "multiply" %}selected{% endif %}>*</option>
-                <option value="divide" {% if operatorId == "divide" %}selected{% endif %}>/</option>
-            </select>
+            {{ form_label(form.operator, 'operator' | trans) }}
+            {{ form_errors(form.operator) }}
+            {{ form_widget(form.operator, {'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="form-group">
-            <label for="operand-b">{% trans with {'%id%': 'B'}%}operand{% endtrans %}</label>
-            <input name="operand-b" id="operand-b" class="form-control" value="{{ operandB | default('') }}"/>
+            {{ form_label(form.operandB.value, 'operand' | trans({'%id%': 'B'})) }}
+            {{ form_errors(form.operandB.value) }}
+            {{ form_widget(form.operandB.value, {'attr': {'class': 'form-control'}}) }}
         </div>
 
-        <button type="submit" class="btn btn-default">{% trans %}compute{% endtrans %}</button>
-    </form>
+        {{ form_widget(form.compute, {'attr': {'class': 'btn btn-default'}, 'label': 'compute' | trans}) }}
+
+
+    {{ form_end(form) }}
 {% endmacro %}
